[package]
name = "todo_actix"
version = "0.1.0"
authors = ["spjcgx <spjcgx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="2.0"
actix-rt="1.0"
serde = {version="1.0", features=["derive"]}
dotenv = "0.15"
config = "0.10"
