[package]
name = "todo_actix"
version = "0.1.0"
authors = ["spjcgx <spjcgx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="2.0"
actix-rt="1.0"
serde = {version="1.0", features=["derive"]}
dotenv = "0.15"
config = "0.10"
tokio-pg-mapper="0.1"
tokio-pg-mapper-derive="0.1"
deadpool-postgres = "0.5"
tokio-postgres = "0.5"
slog="2.5"
slog-term="2.5"
slog-async="2.4"
